Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003 Simon Josefsson
See the end for copying conditions.

* Version 0.1.10 (unreleased)

** IPS iSCSI stringprep profile added.

** A new contrib/ directory added.
Currently it contains a Python interface to Libidn, contributed by
Stephane Bortzmeyer.

** idna.h and punycode.h are now installed by "make install".

** API and ABI is backwards compatible with the previous version.

* Version 0.1.9 (released 2003-02-20)

** SASL ANONYMOUS "plain" stringprep profile added.

** XMPP nodeprep profile fixed.

** API and ABI is backwards compatible with the previous version.
For future releases, the NEWS entry will specifically mention whether
the C header API or library ABI backwards compatibility is affected.

* Version 0.1.8 (released 2003-02-14)

** Portability fixes.
This includes not building the API Reference Manual with GTK-DOC by
default, if you want it use configure parameter --enable-gtk-doc after
making sure your gtkdoc-mkdb accept the --tmpl-dir parameter.

** The type for string length variables is now (s)size_t.
Unfortunately this means binary shared library binary backwards
compatible is lost.

** New nameprep test vectors.

* Version 0.1.7 (released 2003-02-12)

** Uses official IDNA ACE prefix.

* Version 0.1.6 (released 2003-02-11)

** Uses tentative IDNA ACE prefix.

** Added XMPP Node/Resource Identifiers stringprep profiles.

** Fixed prohibited character checks for bidi.

* Version 0.1.5 (released 2003-01-28)

** The library can now be built as part of GNU Libc.
This is experimental and only tested against GNU Libc version 2.3.1.
See the libc/ directory, and libc/README in particular.

** Bug fixes.

* Version 0.1.4 (released 2003-01-15)

** Documentation fixes.

** Portability fixes.

** Bug fixes.

* Version 0.1.3 (released 2003-01-15)

** Added texinfo manual.

* Version 0.1.2 (released 2003-01-08)

** Added high-level IDNA API.
